@@ -1,6 +1,7 @@
 #!/bin/bash
 
 JAVAFX_PATH=Deps/javafx-sdk-17.0.18
+SQLITE_LIB_DIR=Deps/sqlite
 SERVER_PATH=Server
 CLIENT_PATH=client
 OUT_PATH=bin/classes
@@ -8,12 +9,13 @@ OUT_PATH=bin/classes
 mkdir -p "$OUT_PATH"
 
 echo "Compiling Server..."
-javac --module-path "$JAVAFX_PATH/lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -d "$OUT_PATH" "$SERVER_PATH"/*.java "$CLIENT_PATH"/*.java 2>/dev/null
+JAVA_FILES=$(find "$SERVER_PATH" "$CLIENT_PATH" -name "*.java")
+javac --module-path "$JAVAFX_PATH/lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -d "$OUT_PATH" $JAVA_FILES 2>/dev/null
 
 if [ $? -eq 0 ]; then
     echo "Compilation successful!"
     echo "Starting server listening for connections..."
-    java -cp "$OUT_PATH" main 2>/dev/null
+    java --enable-native-access=ALL-UNNAMED -cp "$OUT_PATH:$SQLITE_LIB_DIR/*" main 2>/dev/null
 else
     echo "Compilation failed!"
 fi
